--- a/homework_1/index1_3.html
+++ b/homework_1/index1_3.html
@@ -11,17 +11,18 @@
       background-image: url("https://images.unsplash.com/photo-1502691876148-a84978e59af8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80");
       background-size: cover;
     }
-    p,h2{
+    p,h1{
       background-color: rgba(247, 240, 237, 0.9);
       margin: 40px 90px;
       padding: 15px;
       width: 60%;
     }
 
+
   </style>
 </head>
 <body>
-<h2>Сприйняття кольорів у психології: вплив кольорів на емоції та поведінку людини</h2>
+<h1>Сприйняття кольорів у психології: вплив кольорів на емоції та поведінку людини</h1>
 
 <p>У психології сприйняття кольорів є важливою темою, оскільки кольори можуть впливати на наше настрій, поведінку та емоції. Людський мозок сприймає кольори за допомогою спеціальних клітин в очах, які називаються конусами.За допомогою конусів ми сприймаємо три основні кольори - червоний, зелений і синій. Комбінування цих трьох кольорів у різних співвідношеннях дає нам можливість сприймати всі інші кольори.
 
@@ -34,3 +35,7 @@
   Кольорова терапія - це техніка використання кольорів для зменшення стресу та покращення настрою. Вона може включати в себе використання кольорових ламп, кольорових каменів, кольорових ароматів та інших кольорових технік для досягнення певних цілей.</p>
 </body>
 </html>
+
+<!--
+ background-size: cover; - is used to cover the entire background area of the element
+ -->
