--- a/homework_4/index4_2.html
+++ b/homework_4/index4_2.html
@@ -16,7 +16,8 @@
     <div class="login_text"><p>Вхід в особистий кабінет</p></div>
 
     <form>
-      <div id="inputs"><label for="login"></label>
+      <div id="inputs">
+        <label for="login"></label>
         <input type="text" name="login" id="login" min="5" placeholder="Логін або email" required>
 
         <label for="password"></label>
